--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ ALL_CALENDARS=["", "", ""]
 
 # cron
 CRON_EXPRESSION="0 9 * * *"
+
+# wpp notification group id
+NOTIF_GROUP_ID="120361234240123411@g.us"
