--- a/package.json
+++ b/package.json
@@ -5,8 +5,18 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"tsc --watch\" \"nodemon dist/src/index.js\"",
-    "start": "cross-env NODE_ENV=production concurrently \"tsc --watch\" \"node dist/src/index.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "pm2 start ctes-f5-app",
+    "stop": "pm2 stop ctes-f5-app",
+    "start:all": "pm2 start ctes-f5-app && pm2 start ctes-f5-scheduler",
+    "stop:all": "pm2 stop ctes-f5-app && pm2 stop ctes-f5-scheduler",
+    "1": "npm i -g pm2",
+    "2": "cd scheduler && npm i && cd .. && npm i",
+    "3": "cross-env NODE_ENV=production",
+    "4": "npx -p typescript tsc",
+    "5": "pm2 start dist/src/index.js --name ctes-f5-app",
+    "6": "pm2 start scheduler/index.js --name ctes-f5-scheduler",
+    "7": "pm2 save",
+    "deploy": "npm run 1 && npm run 2 && npm run 3 && npm run 4 && npm run 5 && npm run 6 && npm run 7"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +31,7 @@
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
     "typescript": "^4.7.4",
-    "whatsapp-web.js": "^1.19.4",
+    "whatsapp-web.js": "^1.x",
     "winston": "^3.8.2"
   },
   "devDependencies": {
